# kakvide

./: Cargo.toml  Rakefile  kakvide.toml
.github/workflows/: nightly.yaml
assets/: macos-document-types.plist
src/: app.rs  input.rs  kakoune_process.rs  layout.rs  macos.rs  macos_open_files.rs  main.rs  render.rs
src/render/: popup.rs
src/runtime/: startup.rs
